@@ -1,6 +1,7 @@
 package com.example.AavieApp.security;
 
 import com.example.AavieApp.model.UserProfile;
+
 import com.example.AavieApp.repository.UserProfileRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -8,9 +9,11 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -26,7 +29,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new User(
             userProfile.getEmail(),
             userProfile.getPasswordHash(),
-            Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+            List.of(new SimpleGrantedAuthority("ROLE_" + userProfile.getRole()))
         );
     }
 }
